<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_prendi_lascia"
            android:icon="@drawable/ic_menu_prendilascia"
            android:title="@string/prendi_lascia" />
        <item
            android:id="@+id/nav_liste"
            android:icon="@drawable/ic_menu_recap"
            android:title="@string/liste" />
        <item
            android:id="@+id/nav_csv_explorer"
            android:icon="@drawable/ic_find_in_page_black_24dp"
            android:title="@string/csv_explorer" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
