<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.PrendiLasciaFragments.RecapFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/recap_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recap_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="30sp"/>

        <TableLayout
            android:id="@+id/recap_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recap_label"
            android:padding="2dp">
            <TableRow>
                <TextView
                    android:id="@+id/recap_causale_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recap_causale_label"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"/>
                <TextView
                    android:id="@+id/recap_causale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="testo della causale che poi sarà sostituito"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/recap_user_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recap_user_label"
                    android:textSize="17sp"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"/>
                <TextView
                    android:id="@+id/recap_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="testo della causale che poi sarà sostituito"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/recap_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recap_date_label"
                    android:gravity="center"
                    android:textSize="17dp"
                    android:paddingHorizontal="5dp"/>
                <TextView
                    android:id="@+id/recap_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="testo della causale che poi sarà sostituito"/>
            </TableRow>
        </TableLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recap_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/recap_table"
            app:layout_constraintBottom_toTopOf="@id/end_button"
            android:layout_margin="2dp"
            tools:listitem="@layout/item_listitem">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/end_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/edit_button"/>


    </android.support.constraint.ConstraintLayout>

</FrameLayout>